<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 PT Studio. All rights reserved.
  ~ Licensed under Apache License 2.0 (https://github.com/tienthanh2509/iWownController/blob/master/LICENSE)
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/main_items"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_home"
            android:icon="@drawable/ic_home_24dp_gray"
            android:title="@string/nav_item_main"/>
        <item
            android:id="@+id/nav_item_push_notification_settings"
            android:icon="@drawable/ic_message_bulleted_24dp_gray"
            android:title="@string/nav_item_push_mesg"/>
    </group>
    <group
        android:id="@+id/option_items"
        android:checkableBehavior="all">
        <item
            android:id="@+id/nav_item_settings"
            android:icon="@drawable/ic_settings_24dp_gray"
            android:title="@string/nav_item_settings"/>
        <item
            android:id="@+id/nav_item_support"
            android:icon="@drawable/ic_support_24dp_gray"
            android:title="@string/nav_item_support"/>
        <item
            android:id="@+id/nav_item_about"
            android:icon="@drawable/ic_about_24dp_gray"
            android:title="@string/nav_item_about"/>
    </group>
</menu>
